# rust-watchlist-api

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migration/src/: lib.rs  m20220101_000001_items_create_table.rs
src/: config.rs  errors.rs  main.rs
src/entities/: items.rs
src/models/: items.rs
